@@ -1698,8 +1698,12 @@ void CLASS phase_one_load_raw_c()
 	pixel[col] = curve[pixel[col]];
     }
     for (col=0; col < raw_width; col++) {
+#ifndef LIBRAW_LIBRARY_BUILD
       i = (pixel[col] << 2) - ph1.t_black + t_black[row][col >= ph1.split_col];
-	if (i > 0) RAW(row,col) = i;
+      if (i > 0) RAW(row,col) = i;
+#else
+      RAW(row,col) = pixel[col] << 2;
+#endif
     }
   }
   free (pixel);
@@ -3577,10 +3581,10 @@ void CLASS crop_masked_pixels()
 #endif
     c, m, mblack[8], zero, val;
 
+#ifndef LIBRAW_LIBRARY_BUILD
   if (load_raw == &CLASS phase_one_load_raw ||
       load_raw == &CLASS phase_one_load_raw_c)
     phase_one_correct();
-#ifndef LIBRAW_LIBRARY_BUILD
   if (fuji_width) {
     for (row=0; row < raw_height-top_margin*2; row++) {
       for (col=0; col < fuji_width << !fuji_layout; col++) {
